[package]
name = "json-replacer"
version = "0.2.0"
edition = "2024"
license-file = "LICENSE.txt"
repository = "https://github.com/dalugm/json-replacer"
description = "json mapper"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[features]
cmd = ["dep:clap"]
